syntax = "proto3";

package database;

message User {
    string email = 1;
    string password_hash = 2;
    bool banned = 3;
    string name = 4;
    int32 age = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
}

message Collection {
    map<string, User> users = 1;
}